Dark Mode: Fixed view orders, commission

--- a/src/app.css
+++ b/src/app.css
@@ -56,7 +56,7 @@ body {
                          dark:border-stone-600 dark:bg-stone-700 dark:text-stone-100
     }
 
-    .heading {
+    .heading, tr, .view-summary {
         @apply text-stone-700 dark:text-stone-200
     }
 
